# CodeAlpha___CGPA-Calculator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: CGPACalculator.h  Course.h  MainWindow.h  Validator.h
src/: CGPACalculator.cpp  Course.cpp  MainWindow.cpp  Validator.cpp  main.cpp
ui/: MainWindow.ui
